# python-project-lvl1

./: .gitignore  Makefile  README.md  Test  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml  pyci.yml
brain_games/: cli.py  logic.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: test_brain_calc.py  test_brain_even.py  test_brain_games.py  test_calc.py  test_cli.py  test_even.py  test_gcd.py  test_logic.py  test_prime.py  test_progression.py
